--- a/a/multiplayer.css
+++ b/a/multiplayer.css
@@ -10,6 +10,7 @@ body, html {
     font-family: 'Syncopate', sans-serif;
     user-select: none;
     -webkit-user-select: none;
+    overflow: hidden;
 }
 
 .clear { clear: both }
